@@ -7,7 +7,7 @@
 	android:versionName="1.4">
 	<uses-sdk
 		android:minSdkVersion="4"
-		android:targetSdkVersion="8"/>
+		android:targetSdkVersion="16"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<application
 		android:label="@string/app_name"
@@ -15,7 +15,7 @@
 		<activity
 			android:name="MainActivity"
 			android:label="@string/app_name"
-			android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+			android:theme="@style/MainTheme">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
