@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+	<item android:id="@+id/menu_search"
+		android:title="@string/fselmenu_search"
+		android:icon="@drawable/ic_menu_search"
+		android:showAsAction="ifRoom|collapseActionView"
+		android:actionViewClass="android.widget.SearchView" />
+</menu>
